--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_MORALIS_SERVER=https://ngoqjfts22cn.usemoralis.com:2053/server
-NEXT_PUBLIC_MORALIS_APP_ID=b6L8xb4aMtWwqktRKzaSiTpsej7rdHQjYiQ66SbW
+NEXT_PUBLIC_MORALIS_SERVER=https://faeocbg71arz.usemoralis.com:2053/server
+NEXT_PUBLIC_MORALIS_APP_ID=jBB1y3sgLaHWVsqpnS3ZHlTdK2MsJwwP6TsjsSuO
